if WITH_SCRIPTS
tipcutilsdir = $(sysconfdir)/init.d
dist_tipcutils_SCRIPTS = etc/init.d/tipcutils

tipcifupdir = $(sysconfdir)/network/if-up.d/
dist_tipcifup_SCRIPTS = etc/network/if-up.d/tipcutils

tipcifdowndir = $(sysconfdir)/network/if-down.d/
dist_tipcifdown_SCRIPTS = etc/network/if-down.d/tipcutils
endif
